syntax = "proto3";
package DomainServices.SalesArrangementService.v1;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts.v1";

import "google/protobuf/empty.proto";
import "SalesArrangementServiceTypes.proto";

service SalesArrangementService {
   rpc CreateSalesArrangement (DomainServices.SalesArrangementService.CreateSalesArrangementRequest) returns (DomainServices.SalesArrangementService.CreateSalesArrangementResponse);
   
   rpc GetSalesArrangement (DomainServices.SalesArrangementService.SalesArrangementIdRequest) returns (DomainServices.SalesArrangementService.GetSalesArrangementResponse);

   rpc GetSalesArrangementData (DomainServices.SalesArrangementService.SalesArrangementIdRequest) returns (DomainServices.SalesArrangementService.GetSalesArrangementDataResponse);
   
   rpc GetSalesArrangementsByCaseId (DomainServices.SalesArrangementService.GetSalesArrangementsByCaseIdRequest) returns (DomainServices.SalesArrangementService.GetSalesArrangementsByCaseIdResponse);
   
   rpc UpdateSalesArrangementState (DomainServices.SalesArrangementService.UpdateSalesArrangementStateRequest) returns (google.protobuf.Empty);
   
   rpc ValidateSalesArrangement (DomainServices.SalesArrangementService.SalesArrangementIdRequest) returns (DomainServices.SalesArrangementService.ValidateSalesArrangementResponse);
   
   rpc UpdateSalesArrangementData (DomainServices.SalesArrangementService.UpdateSalesArrangementDataRequest) returns (google.protobuf.Empty);

   rpc LinkModelationToSalesArrangement (LinkModelationToSalesArrangementRequest) returns (google.protobuf.Empty);
}